# LY-NEXT

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  SECURITY.md  TECHNICAL.md  TOOLS.md  docker-compose.yml  install.ps1  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  sync.ps1  sync.sh
.cursor/rules/: workbench-frontend-constitution.mdc
.github/workflows/: security-audit.yml
config/: default_config.yaml
docker/: .env.example  Caddyfile.example  Dockerfile  README.md  compose.pgvector.yml  demo-up.ps1  demo-up.sh  docker-compose.yml  nginx.conf.example
docs/: QUICKSTART.md  USER.md  workbench-refactor-spec.md
install/: README.md  configure_local.py  install-auto.ps1  install-auto.sh  install-windows.ps1  install.ps1  install.sh  pg-common.ps1  pgvector-windows.ps1  pgvector.md
ly_next/: __init__.py  __main__.py  default_config.yaml  main.py
ly_next/agent/: __init__.py  base.py  channel_tools.py  chat.py  chat_middleware.py  chat_model.py  chat_pipeline.py  chat_runtime.py  content_trust.py  coordinator.py  deps.py  factory.py  image_reply.py  json_extract.py  langchain_integration.py  langgraph_prebuilt.py  llm_text.py  memory_write_policy.py  model_router.py  persona.py  plan.py  prompt_augment.py  prompt_templates.py  react.py  run_context.py  scratchpad_compress.py  skills_loader.py  startup_memory.py  state.py  streaming_tool_executor.py  tool_context.py  tool_filter.py  tool_router.py  tool_router_index.py  tool_streak.py  turn_engine.py  turn_plan.py  vision_precaption.py
ly_next/api/: __init__.py  auth_api.py  base.py  bridge.py  chat_stream_api.py  image_api.py  loader.py  loader_security.py  ly_api.py  mcp_api.py  models_api.py  onebot11_api.py  plugin_router.py  runs_api.py  threads_api.py  websocket.py  wei_api.py  ws_api.py
ly_next/apis/: README.md  __init__.py  sample.py
ly_next/builtin/: agent_examples.yaml
ly_next/core/: __init__.py  app_context.py  audit_log.py  auth_context.py  auth_gate.py  auth_http.py  auth_jwt.py  auth_principal.py  auth_users.py  bridge_log.py  cache.py  chat_trace_log.py  checkpointer.py  cli_select.py  config.py  config_merge.py  config_migrate.py  config_presets.py  context_budget.py  data_bootstrap.py  database.py  doctor.py  doctor_fixes.py  first_run.py  http_security.py  http_url.py  llm_probe.py  logger.py  observability.py  onboarding_helpers.py  password_hash.py  plugin_catalog.py  plugin_deps.py  postgres_port.py  project_sync.py  rate_limit.py  run_graph.py  run_lifecycle.py  run_memory.py  run_store.py  (+12 more)
ly_next/mcp/: __init__.py  adapt_cache.py  block_preflight.py  catalog.py  config_adapter.py  langchain_adapter_bridge.py  preflight.py  remote_bridge.py  search_dedup.py  server.py  server_filter.py
ly_next/messaging/: __init__.py  dispatcher.py  image_handler.py  models.py  onebot_commands.py  onebot_media.py  telegram_commands.py
ly_next/models/: __init__.py  anthropic.py  base_llm.py  factory.py  migrate.py  ollama.py  openai_chat_body.py  openai_compat.py  openai_compat_auth.py  registry.py  stream_assemble.py  timeout.py
ly_next/rag/: __init__.py  chunk_document.py  chunking.py  document_retriever.py  embedding_config.py  embeddings.py  example_selector.py  markdown_chunker.py  query_rewrite.py  (+5 more)
plugins/: README.md  catalog.json  hello_plugin.py  sample_tool_plugin.py
rules/: README.md  api-trust-and-tools.mdc  ly-next-project.mdc  response-safety.mdc  workbench-frontend-constitution.mdc
scripts/: compress_firefly_images.py  compress_orbit_images.py  fix_migrated_features.py  migrate_features_batch.py  move_chat_to_features.py  rag_eval.py  replace_liquid_glass.py  split_app_css.py  split_chat_css.py  sync_www_assets.py
tests/: conftest.py  test_agent_deps_stream.py  test_agent_deps_tool_policy.py  test_agent_loop_routing.py  test_api_loader_security.py  test_audit_log.py  test_auth_api.py  test_auth_http.py  test_auth_jwt_rbac.py  test_auth_whitelist_sanitize.py  test_build_agent_deps_registry.py  test_builtin_tools.py  test_channel_tools.py  test_chat_model.py  test_chat_payload_messages.py  test_chat_pipeline.py  test_chat_trace_log.py  test_config_database_urls.py  test_config_env_resolve.py  test_config_merge.py  test_config_migrate.py  test_content_trust.py  test_context_budget.py  test_cors_origins.py  test_data_bootstrap.py  test_doctor.py  test_doctor_fixes.py  test_document_retriever_paths.py  test_document_tools.py  test_embedding_config.py  test_first_run.py  test_host_approvals.py  test_host_approvals_api.py  test_host_exec.py  test_host_exec_guard.py  test_host_files.py  test_host_platform.py  test_host_register.py  test_host_sandbox.py  test_host_search.py  (+87 more)
www/: app.html  firefly.html  home.html  index.html  login.html
(+963 files in other folders)
