[project]
name = "LY-NEXT"
version = "1.0.1"
description = "FastAPI + LangGraph Agent Framework with MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LY-NEXT"}]
keywords = ["fastapi", "langgraph", "agent", "llm", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.0.0",
    "pgvector>=0.2.0",
    "psutil>=7.0.0",
    "duckduckgo-search>=7.0.0",
    "selectolax>=0.3.0",
    "trafilatura>=2.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary,pool]>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.uv]
default-groups = ["dev"]

[project.entry-points."ly_next.plugins"]
# Example: my-plugin = "my_package.plugin:MyPlugin"

[project.scripts]
ly = "ly_next.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ly_next"]

[tool.hatch.build.targets.sdist]
include = ["ly_next", "config", "LICENSE", "README.md", "SECURITY.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Disable cache when .pytest_cache is not writable. Temp dirs use system %TEMP% (Windows-safe).
addopts = "-p no:cacheprovider"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true
